Need to fix alignment

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -21,7 +21,7 @@ body {
 	z-index: 100;
 }
 .background {
-	position: fixed;
+	position: absolute;
     top: 0px; bottom: 0px; right: 0px; left: 0px;
     background-color: white;
     z-index: -100;
@@ -36,7 +36,7 @@ body {
 }
 
 .quizTitle, .question, .choicesBox, .submit,
-.feedback, .explanation, .score {
+.feedback, .explanation, .score, .endingPage {
 	font-family: 'Julius Sans One', sans-serif;
 }
 
@@ -148,7 +148,7 @@ input {
 }
 
 .questionExplanation {
-	display: none;
+	
 }
 
 .submitButtonstuff {
@@ -200,5 +200,5 @@ input {
 }
 
 .endingPage {
-	
+	display: none;
 }
